<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Login"
    android:background="@color/login_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="529dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/backgtound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="45dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:textAlignment="center"
                    android:layout_marginStart="8sp"
                    android:textColor="#ffffff"
                    android:textSize="35sp"
                    android:fontFamily="@font/cookie"
                    android:text="@string/account" />

                <ImageView
                    android:layout_width="223dp"
                    android:layout_height="130dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="-25dp"
                    android:src="@drawable/boookk"
                    android:padding="10dp"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_id"
                    app:boxStrokeColor="#000000"
                    android:textColorHint="#000000">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fitsSystemWindows="true"
                        android:inputType="textEmailAddress"
                        android:textColor="#0E0E0E"
                        app:boxStrokeColor="#000000"
                        android:textColorHighlight="#050101"
                        android:textColorLink="#0B0A0A" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:boxStrokeColor="#000000"
                    android:textColorHint="#000000"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="#070606"
                    app:suffixTextColor="#0B0A0A">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="#0E0E0E"
                        android:textColorLink="#0B0A0A" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>



            <TextView
                android:id="@+id/Forget"
                style="@style/viewParent"
                android:layout_gravity="end"
                android:layout_marginTop="10sp"
                android:text="@string/forgot_password"
                android:fontFamily="@font/cookie"
                android:backgroundTint="#000000"
                android:textColor="#000000"
                android:textSize="28sp"/>

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/cirLoginButton"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/login"
                android:textAlignment="center"
                app:initialCornerAngle="27dp"
                android:textColor="#000000"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />

            <TextView
                android:id="@+id/newuser"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/new_user_register_now"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="329dp"
                android:layout_height="53dp"
                android:layout_marginTop="60dp"
                android:gravity="center">

                <ProgressBar
                    android:id="@+id/progressBar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>

    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_img"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="30dp"
        android:onClick="onLoginClick"
        android:contentDescription="@string/todo" />

</RelativeLayout>