<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/login_bk_color"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".Sign_up">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="529dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/backgtound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8sp"
                    android:textColor="#ffffff"
                    android:textAlignment="center"
                    android:textSize="35sp"
                    android:fontFamily="@font/cookie"
                    android:text="@string/account" />

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="-4dp"
                    android:src="@drawable/boookk" />


            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#000000"
                        app:boxStrokeColor="#000000"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="Name">


                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTextName"
                            android:inputType="textPersonName"
                            android:textColor="#0E0E0E"
                            android:textColorHighlight="#050101"
                            android:textColorLink="#0B0A0A"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#000000"
                        app:boxStrokeColor="#000000"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/email_id">


                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTextEmail"
                            android:inputType="textEmailAddress"
                            android:textColor="#0E0E0E"
                            android:textColorHighlight="#050101"
                            android:textColorLink="#0B0A0A"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#000000"
                        app:boxStrokeColor="#000000"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="Phone Number">


                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTextMobile"
                            android:inputType="phone"
                            android:textColor="#0E0E0E"
                            android:textColorHighlight="#050101"
                            android:textColorLink="#0B0A0A"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:textColorHint="#000000"
                        app:boxStrokeColor="#000000"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="#070606">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:textColor="#0E0E0E"
                            android:textColorHighlight="#050101"
                            android:textColorLink="#0B0A0A" />

                    </com.google.android.material.textfield.TextInputLayout>




                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/cirRegisterButton"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="Register"
                        app:initialCornerAngle="27dp"
                        android:textAlignment="center"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp" />

                    <TextView
                        android:id="@+id/reg_login_btn"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="Already have an account?"
                        android:textColor="#000000"
                        android:textAlignment="center"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:weightSum="12">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/whiteTextColor" />


                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/whiteTextColor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:gravity="center">

                <ProgressBar
                    android:id="@+id/progressBar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_side_bg" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"
        android:onClick="onLoginClick"
        android:src="@drawable/ic_back_img" />
</RelativeLayout>