<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_courses"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".About_us">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="#EFCB95" />

    <!--Top Header Layout-->
    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/bachk"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back_24dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About Us"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />



    </LinearLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@+id/topbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <!--Top Profile Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circularbordersolid"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proximanovaregular"
                        android:textAlignment="center"
                        android:text="@string/exam"
                        android:textColor="#0B0A0A"
                        android:textSize="21sp" />




                </LinearLayout>




            </LinearLayout>

            <!--Option Bar-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circularbordersolid"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/lightgrey" />

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/lightgrey" />

            </LinearLayout>

            <!--Bootom Cards with sections-->
            <LinearLayout
                android:id="@+id/personalinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--About Me Card-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circularbordersolid"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Special Thanks"
                                android:textStyle="bold"
                                android:fontFamily="@font/proximanovaregular"
                                android:textSize="17sp"
                                android:textColor="#0B0A0A" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingEnd="8dp"
                            tools:ignore="RtlSymmetry">

                            <ImageView
                                android:id="@+id/pic"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:background="@drawable/circular_grey_bordersolid"
                                android:padding="5dp"
                                android:src="@drawable/ash" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:text="@string/ashutoshsir"
                                android:textSize="15sp"
                                android:textAlignment="center"
                                android:textColor="@color/goodgrey"
                                android:fontFamily="@font/proximanovaregular" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <!--Contact Details-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circularbordersolid"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Our Team"
                            android:textSize="17sp"
                            android:textColor="#000000"
                            android:fontFamily="@font/proximanovaregular"
                            android:textStyle="bold" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingRight="8dp">

                            <ImageView
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                android:background="@drawable/circular_grey_bordersolid"
                                android:padding="5dp"
                                android:src="@drawable/z" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:text="Pradeep Yadav"
                                android:textSize="15sp"
                                android:textAlignment="center"
                                android:textColor="@color/goodgrey"
                                android:fontFamily="@font/proximanovaregular" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center_vertical"
                            android:paddingRight="8dp">

                            <ImageView
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                android:background="@drawable/circular_grey_bordersolid"
                                android:padding="5dp"
                                android:src="@drawable/v" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:text="Ashish Maurya"
                                android:textSize="15sp"
                                android:textColor="@color/goodgrey"
                                android:textAlignment="center"
                                android:fontFamily="@font/proximanovaregular" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center_vertical"
                            android:paddingRight="8dp">

                            <ImageView
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                android:background="@drawable/circular_grey_bordersolid"
                                android:padding="5dp"
                                android:src="@drawable/x" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:text="Manish Maurya"
                                android:textSize="15sp"
                                android:textAlignment="center"
                                android:textColor="@color/goodgrey"
                                android:fontFamily="@font/proximanovaregular" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <!--Skills Details-->
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/twoo">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/ad2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom= "true"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="@string/adbanner" />

    </LinearLayout>
</RelativeLayout>